bk_ida/gccida/c3/ppro_p01_unit_ready_cost
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/ppro_p01_unit_ready_cost/src/insn-attrtab.c:6794:29: error: too many arguments provided to function-like macro invocation
fatal_insn_not_found( insn, "insn-attrtab.c", 6331, "ppro_p01_unit_ready_cost"); 
                            ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/ppro_p01_unit_ready_cost/src/toplev.h:52:9: note: macro 'fatal_insn_not_found' defined here
#define fatal_insn_not_found(insn) \
        ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/ppro_p01_unit_ready_cost/src/insn-attrtab.c:6794:1: error: use of undeclared identifier 'fatal_insn_not_found'; did you mean '_fatal_insn_not_found'?
fatal_insn_not_found( insn, "insn-attrtab.c", 6331, "ppro_p01_unit_ready_cost"); 
^~~~~~~~~~~~~~~~~~~~
_fatal_insn_not_found
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/ppro_p01_unit_ready_cost/src/toplev.h:40:13: note: '_fatal_insn_not_found' declared here
extern void _fatal_insn_not_found       PARAMS ((struct rtx_def *,
            ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/ppro_p01_unit_ready_cost/src/obj/insn-attrtab.o] Error 1
